Enhance index.html with meta tags
Added meta tags for description, keywords, and author.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+    <meta name="description" content="Otaku Universe is the best platform for Anime news, discussions, and community interactions. Join us for updates from US, Saudi Arabia, and Japan servers.">
+
+    <meta name="keywords" content="Anime, Otaku, Manga, Anime News, Anime Forum, Japan Culture, Attack on Titan, One Piece, Community, Script">
+
+    <meta name="author" content="Otaku Universe Admin">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name='admaven-placement' content='Bqjw6qjU9'>
