--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <meta name="keywords" content="Anime, Manga, Otaku Universe, Anime News, Community, One Piece, Attack on Titan, Naruto, Anime Forum">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="author" content="Otaku Universe Admin">
-    <meta name="google-adsense-account" content="ca-pub-2452290332411403">
-
+    <meta name='admaven-placement' content=Bqjw6qjU9>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
