--- a/index.html
+++ b/index.html
@@ -9,22 +9,13 @@
     <meta name="keywords" content="Anime, Manga, Otaku Universe, Anime News, Community, One Piece, Attack on Titan, Naruto, Anime Forum">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="author" content="Otaku Universe Admin">
-    <meta name='admaven-placement' content=Bqjw6qjU9>
+    <meta name="monetag" content="964b818f0e5adacd1993a635541fe3cf">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
-    <script>
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('load', function() {
-      navigator.serviceWorker.register('/sw.js').then(function(registration) {
-        console.log('PropellerAds SW registered with scope: ', registration.scope);
-      }, function(err) {
-        console.log('ServiceWorker registration failed: ', err);
-      });
-    });
-  }
+   
 </script>
 
     <style>
