Add ad options script and external invoke script
Added scripts for ad options and external invocation.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
    
-
+<script>
+  atOptions = {
+    'key' : '8cf86ce4b80eb9ca5441763a5c85b900',
+    'format' : 'iframe',
+    'height' : 90,
+    'width' : 728,
+    'params' : {}
+  };
+</script>
+<script src="https://processesshaken.com/8cf86ce4b80eb9ca5441763a5c85b900/invoke.js"></script>
     <style>
         /* --- Theme Variables --- */
         :root {
