--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Otaku Universe | Anime News & Global Community</title>
     
     <meta name="google-adsense-account" content="ca-pub-2452290332411403">
-    
+    <meta name="monetag" content="964b818f0e5adacd1993a635541fe3cf">
     <meta name="description" content="The #1 Global Platform for Anime & Manga fans. Join the Otaku Universe community for breaking news, discussions, and theories.">
     <meta name="keywords" content="Anime, Manga, Otaku Universe, Anime News, Community, One Piece, Attack on Titan, Naruto, Anime Forum">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
