Add site verification meta tag to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Otaku Universe | Anime News & Global Community</title>
-    
+    <meta name="bitmedia-site-verification" content="427fa8e871b509461c6a4bf5b4b47ce3" />
     <meta name="description" content="The #1 Global Platform for Anime & Manga fans. Join the Otaku Universe community for breaking news, discussions, and theories.">
     <meta name="keywords" content="Anime, Manga, Otaku Universe, Anime News, Community, One Piece, Attack on Titan, Naruto, Anime Forum">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
