--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
+    <script type="text/javascript">
+    aclib.runAutoTag({
+        zoneId: 'vnkl6ub1we',
+    });
+</script>
+
 
     <style>
         /* --- Theme Variables --- */
