--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <title>Otaku Universe | Anime News & Global Community</title>
     
     <meta name="description" content="The #1 Global Platform for Anime & Manga fans. Join the Otaku Universe community for breaking news, discussions, and theories.">
+    <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<meta name="description" content="The ultimate source for Anime & Manga news and community discussions. موقعك الأول لأخبار الأنمي والمانجا ونقاشات الأوتاكو. Noticias y novedades del mundo Anime. アニメと漫画の最新ニュース. Join the Otaku Universe now!">
+<meta name="keywords" content="Anime, Manga, Otaku, Anime News, Manga Updates, Anime Community, Japan Culture, Cosplay, Anime Review, Manga Spoilers, Release Dates, Best Anime, Shonen, Seinen, Isekai, Waifu, Crunchyroll Alternative, Anime Discussion, Weekly Shonen Jump, Anime Recommendations, Manga Readers, Otaku World, أنمي, مانجا, أخبار الأنمي, أوتاكو, عالم الأنمي, مانجا مترجمة, حرق أحداث, مواعيد عرض الأنمي, تحميل أنمي, أفضل انميات, نقاشات انمي, نظريات, فصول مانجا, انمي جديد, صور انمي, ملخص انمي, شخصيات انمي, تصنيف انمي, アニメ, 漫画, オタク, ネタバレ, 最新情報, 感想, 少年ジャンプ, アニメニュース, Anime en español, Manga online, Noticias anime, Comunidad Otaku, Estrenos anime, Reseña anime, Spoilers manga, Mejores animes, Leer manga, Anime latino, One Piece, Jujutsu Kaisen, Demon Slayer, Attack on Titan, Naruto, Dragon Ball, Solo Leveling, Bleach">
+<meta name="author" content="Otaku Universe">
+
+<meta property="og:site_name" content="Otaku Universe">
+<meta property="og:title" content="Otaku Universe - Anime & Manga News | أخبار الأنمي">
+<meta property="og:description" content="Join the biggest Anime & Manga community. اكتشف آخر أخبار الأنمي والمانجا معنا.">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://otaku-universe-news.github.io/outaku-universel/images/logo.jpg">
+<meta property="og:url" content="https://otaku-universe-news.github.io/outaku-universel/">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Otaku Universe - Anime & Manga News">
+<meta name="twitter:description" content="Latest Anime news and Manga discussions. أخبار ونقاشات الأنمي.">
+<meta name="twitter:image" content="https://otaku-universe-news.github.io/outaku-universel/images/logo.jpg">
+
     <meta name="keywords" content="Anime, Manga, Otaku Universe, Anime News, Community, One Piece, Attack on Titan, Naruto, Anime Forum">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="author" content="Otaku Universe Admin">
