--- a/index.html
+++ b/index.html
@@ -666,7 +666,46 @@
         //  (1) منطقة إضافة الأخبار - NEWS AREA
         // ==========================================
         let newsData = [
-        
+        {
+        id: "6",
+        server: "us",
+        title: "Yumiri Hanamori Steps Down From Magilumiere Anime Role",
+        img: "https://i.postimg.cc/gJ4XsYkH/1769959276-c03694ab217f53d88c630d2e02cc0f5f-768x432.png",
+        videoUrl: "",
+        desc: "The anime Magilumiere Magical Girls Inc. announced that Yumiri Hanamori has stepped down from her role as Hitomi Koshigaya. The decision came after repeated discussions between the production team and her agency, tomorrow jam. Following the agency’s request and careful consideration, both sides reached a mutual agreement. The new voice actor for Hitomi Koshigaya has not yet been announced.",
+        date: "2026-02-01",
+        author: "Admin"
+    },
+    {
+        id: "7",
+        server: "es",
+        title: "Yumiri Hanamori abandona su papel en el anime Magilumiere",
+        img: "https://i.postimg.cc/gJ4XsYkH/1769959276-c03694ab217f53d88c630d2e02cc0f5f-768x432.png",
+        videoUrl: "",
+        desc: "El anime Magilumiere Magical Girls Inc. anunció que Yumiri Hanamori ha dejado su papel como Hitomi Koshigaya. La decisión se tomó tras varias conversaciones entre el equipo de producción y su agencia, tomorrow jam. A petición de la agencia y tras una cuidadosa evaluación, ambas partes llegaron a un acuerdo mutuo. El nuevo actor de voz para Hitomi Koshigaya aún no ha sido anunciado.",
+        date: "2026-02-01",
+        author: "Admin"
+    },
+    {
+        id: "8",
+        server: "jp",
+        title: "花守ゆみり、『マジルミエール』アニメの役を降板",
+        img: "https://i.postimg.cc/gJ4XsYkH/1769959276-c03694ab217f53d88c630d2e02cc0f5f-768x432.png",
+        videoUrl: "",
+        desc: "アニメ『マジルミエール 魔法少女株式会社』は、花守ゆみりが越谷ひとみ役を降板したことを発表した。制作側と所属事務所のtomorrow jamとの度重なる協議の結果、事務所側からの要請を受け、双方の合意のもとで決定された。なお、越谷ひとみ役の新キャストは現時点では未発表となっている。",
+        date: "2026-02-01",
+        author: "Admin"
+    },
+    {
+        id: "9",
+        server: "sa",
+        title: "يوميري هاناموري تنسحب من دورها في أنمي Magilumiere",
+        img: "https://i.postimg.cc/gJ4XsYkH/1769959276-c03694ab217f53d88c630d2e02cc0f5f-768x432.png",
+        videoUrl: "",
+        desc: "أعلن أنمي Magilumiere Magical Girls Inc. أن الممثلة الصوتية يوميري هاناموري قد انسحبت من دورها بشخصية هيتومي كوشيغايا. وجاء هذا القرار بعد عدة مناقشات بين فريق الإنتاج ووكالتها tomorrow jam، حيث طلبت الوكالة انسحابها من المشروع. وبعد دراسة متأنية، توصل الطرفان إلى اتفاق مشترك. ولم يتم بعد الإعلان عن الممثلة الصوتية الجديدة للشخصية.",
+        date: "2026-02-01",
+        author: "Admin"
+    },
     {
     id: "5",
     server: "jp",
