--- a/index.html
+++ b/index.html
@@ -607,30 +607,78 @@
             measurementId: "G-TWV84KPXDL"
         };
         
-        const TG_TOKEN = "8584369176:AAF7_akcyjXyic2MG7cd1Xx4JgB2uOpJ7ok";
-        const TG_CHANNEL_ID = "-1003650299197";
+        const TG_TOKEN = "8584369176:AAF7_akcyjXyic2MG7cd1Xx4JgB2uOpJ7ok";[
+    {
+        id: "6",
+        server: "us",
+        title: "Yumiri Hanamori Steps Down From Magilumiere Anime Role",
+        img: "https://i.postimg.cc/gJ4XsYkH/1769959276-c03694ab217f53d88c630d2e02cc0f5f-768x432.png",
+        videoUrl: "",
+        desc: "The anime Magilumiere Magical Girls Inc. announced that Yumiri Hanamori has stepped down from her role as Hitomi Koshigaya. The decision came after repeated discussions between the production team and her agency, tomorrow jam. Following the agency’s request and careful consideration, both sides reached a mutual agreement. The new voice actor for Hitomi Koshigaya has not yet been announced.",
+        date: "2026-02-01",
+        author: "Admin"
+    },
+    {
+        id: "7",
+        server: "es",
+        title: "Yumiri Hanamori abandona su papel en el anime Magilumiere",
+        img: "https://i.postimg.cc/gJ4XsYkH/1769959276-c03694ab217f53d88c630d2e02cc0f5f-768x432.png",
+        videoUrl: "",
+        desc: "El anime Magilumiere Magical Girls Inc. anunció que Yumiri Hanamori ha dejado su papel como Hitomi Koshigaya. La decisión se tomó tras varias conversaciones entre el equipo de producción y su agencia, tomorrow jam. A petición de la agencia y tras una cuidadosa evaluación, ambas partes llegaron a un acuerdo mutuo. El nuevo actor de voz para Hitomi Koshigaya aún no ha sido anunciado.",
+        date: "2026-02-01",
+        author: "Admin"
+    },
+    {
+        id: "8",
+        server: "jp",
+        title: "花守ゆみり、『マジルミエール』アニメの役を降板",
+        img: "https://i.postimg.cc/gJ4XsYkH/1769959276-c03694ab217f53d88c630d2e02cc0f5f-768x432.png",
+        videoUrl: "",
+        desc: "アニメ『マジルミエール 魔法少女株式会社』は、花守ゆみりが越谷ひとみ役を降板したことを発表した。制作側と所属事務所のtomorrow jamとの度重なる協議の結果、事務所側からの要請を受け、双方の合意のもとで決定された。なお、越谷ひとみ役の新キャストは現時点では未発表となっている。",
+        date: "2026-02-01",
+        author: "Admin"
+    },
+    {
+        id: "9",
+        server: "sa",
+        title: "يوميري هاناموري تنسحب من دورها في أنمي Magilumiere",
+        img: "https://i.postimg.cc/gJ4XsYkH/1769959276-c03694ab217f53d88c630d2e02cc0f5f-768x432.png",
+        videoUrl: "",
+        desc: "أعلن أنمي Magilumiere Magical Girls Inc. أن الممثلة الصوتية يوميري هاناموري قد انسحبت من دورها بشخصية هيتومي كوشيغايا. وجاء هذا القرار بعد عدة مناقشات بين فريق الإنتاج ووكالتها tomorrow jam، حيث طلبت الوكالة انسحابها من المشروع. وبعد دراسة متأنية، توصل الطرفان إلى اتفاق مشترك. ولم يتم بعد الإعلان عن الممثلة الصوتية الجديدة للشخصية.",
+        date: "2026-02-01",
+        author: "Admin"
+    },
 
-        // الرابط المباشر المطلوب
-        const ADS_DIRECT_LINK = "https://otieu.com/4/10553289";
-
-        firebase.initializeApp(firebaseConfig);
-        const auth = firebase.auth();
-        const db = firebase.firestore();
-
-        /* --- STATE --- */
-        let currentUser = null;
-        let currentServer = 'us'; 
-
-        let newsData = [
-            { id: "6", server: "us", title: "Yumiri Hanamori Steps Down From Magilumiere Anime Role", img: "https://i.postimg.cc/gJ4XsYkH/1769959276-c03694ab217f53d88c630d2e02cc0f5f-768x432.png", videoUrl: "", desc: "The anime Magilumiere Magical Girls Inc. announced that Yumiri Hanamori has stepped down from her role as Hitomi Koshigaya...", date: "2026-02-01", author: "Admin" },
-            { id: "7", server: "es", title: "Yumiri Hanamori abandona su papel en el anime Magilumiere", img: "https://i.postimg.cc/gJ4XsYkH/1769959276-c03694ab217f53d88c630d2e02cc0f5f-768x432.png", videoUrl: "", desc: "El anime Magilumiere Magical Girls Inc. anunció que Yumiri Hanamori ha dejado su papel como Hitomi Koshigaya...", date: "2026-02-01", author: "Admin" },
-            { id: "8", server: "jp", title: "花守ゆみり、『マジルミエール』アニメの役を降板", img: "https://i.postimg.cc/gJ4XsYkH/1769959276-c03694ab217f53d88c630d2e02cc0f5f-768x432.png", videoUrl: "", desc: "アニメ『マジルミエール 魔法少女株式会社』は、花守ゆみりが越谷ひとみ役を降板したことを発表した...", date: "2026-02-01", author: "Admin" },
-            { id: "9", server: "sa", title: "يوميري هاناموري تنسحب من دورها في أنمي Magilumiere", img: "https://i.postimg.cc/gJ4XsYkH/1769959276-c03694ab217f53d88c630d2e02cc0f5f-768x432.png", videoUrl: "", desc: "أعلن أنمي Magilumiere Magical Girls Inc. أن الممثلة الصوتية يوميري هاناموري قد انسحبت من دورها بشخصية هيتومي كوشيغايا...", date: "2026-02-01", author: "Admin" },
-            { id: "5", server: "jp", title: "『Wistoria: Wand and Sword』漫画、累計発行部数300万部突破で全巻重版決定", img: "https://i.postimg.cc/gkJnKFh6/1769950619-f9ee68407331b3e9b3b0fb9d0796dfcc-768x432.png", videoUrl: "", desc: "漫画『Wistoria: Wand and Sword』は、累計発行部数が300万部を突破したことを受け...", date: "2026-04-01", author: "Admin" },
-            { id: "4", server: "sa", title: "مانغا Wistoria: Wand and Sword تحصل على إعادة طباعة كاملة", img: "https://i.postimg.cc/gkJnKFh6/1769950619-f9ee68407331b3e9b3b0fb9d0796dfcc-768x432.png", videoUrl: "", desc: "أعلنت مانغا Wistoria: Wand and Sword رسميًا عن إعادة طباعة كاملة لجميع أجزائها...", date: "2026-04-01", author: "Admin" },
-            { id: "3", server: "es", title: "El manga Wistoria: Wand and Sword recibe una reimpresión completa", img: "https://i.postimg.cc/gkJnKFh6/1769950619-f9ee68407331b3e9b3b0fb9d0796dfcc-768x432.png", videoUrl: "", desc: "El manga Wistoria: Wand and Sword ha anunciado una reimpresión completa de la serie...", date: "2026-04-01", author: "Admin" },
-            { id: "2", server: "us", title: "Wistoria: Wand and Sword Manga Gets Full-Series Reprint", img: "https://i.postimg.cc/gkJnKFh6/1769950619-f9ee68407331b3e9b3b0fb9d0796dfcc-768x432.png", videoUrl: "", desc: "The manga Wistoria: Wand and Sword has announced a full-series reprint...", date: "2026-04-01", author: "Admin" }
-        ];
+            {
+        id: "3",
+        server: "es",
+        title: "El manga Wistoria: Wand and Sword recibe una reimpresión completa al superar los 3 millones de copias",
+        img: "https://i.postimg.cc/gkJnKFh6/1769950619-f9ee68407331b3e9b3b0fb9d0796dfcc-768x432.png",
+        videoUrl: "",
+        desc: "El manga Wistoria: Wand and Sword ha anunciado una reimpresión completa de la serie tras superar los 3 millones de copias en circulación. Este logro confirma la creciente popularidad de la franquicia. El próximo volumen del manga se lanzará en abril de 2026, coincidiendo con el estreno de la segunda temporada del anime.",
+        date: "2026-04-01",
+        author: "Admin"
+    },
+    {
+        id: "4",
+        server: "sa",
+        title: "مانغا Wistoria: Wand and Sword تحصل على إعادة طباعة كاملة بعد تجاوز التوزيع 3 ملايين نسخة",
+        img: "https://i.postimg.cc/gkJnKFh6/1769950619-f9ee68407331b3e9b3b0fb9d0796dfcc-768x432.png",
+        videoUrl: "",
+        desc: "أعلنت مانغا Wistoria: Wand and Sword رسميًا عن إعادة طباعة كاملة لجميع أجزائها، بعد أن تجاوز إجمالي عدد النسخ المتداولة 3 ملايين نسخة. يعكس هذا الإنجاز الشعبية المتزايدة للسلسلة. ومن المقرر إصدار المجلد القادم في أبريل 2026، بالتزامن مع عرض الموسم الثاني من الأنمي.",
+        date: "2026-04-01",
+        author: "Admin"
+    },
+    {
+        server: "jp",
+        title: "『Wistoria: Wand and Sword』漫画、累計発行部数300万部突破で全巻重版決定",
+        img: "https://i.postimg.cc/gkJnKFh6/1769950619-f9ee68407331b3e9b3b0fb9d0796dfcc-768x432.png",
+        videoUrl: "",
+        desc: "漫画『Wistoria: Wand and Sword』は、累計発行部数が300万部を突破したことを受け、全巻重版が正式に発表された。本作の人気は着実に拡大しており、次巻は2026年4月に発売予定。また、同時期にテレビアニメ第2期の放送開始も予定されている。",
+        date: "2026-04-01",
+        author: "Admin"
+    }
+            ],
 
         let reviewsData = [
             { id: "101", server: "us", title: "Attack on Titan Final Season Review", img: "https://images7.alphacoders.com/133/1330715.jpeg", desc: "An absolute masterpiece regarding storytelling and animation. The conclusion is...", score: "10" },
