--- a/index.html
+++ b/index.html
@@ -631,6 +631,45 @@
         const ADS_DIRECT_LINK = "https://otieu.com/4/10553289"; 
 
         const newsData = [
+              {
+        id: "10",
+        server: "us",
+        title: "Chainsmoker Cat Manga Gets Anime Adaptation",
+        img: "https://i.postimg.cc/fbfv763p/1769993652-8dfd2d1ee8a4123661dc1da5dcc5a3a4-768x432.png",
+        videoUrl: "https://youtu.be/7tfxuLFVu7o?si=qCy2_XErtJgtou_T",
+        desc: "The manga series Chainsmoker Cat by NyanNyanFactory is receiving an anime adaptation set to premiere in July 2026. A teaser visual and official trailer were released along with details about the main cast and production staff.",
+        date: "2026-07-01",
+        author: "Admin"
+    },
+    {
+        id: "11",
+        server: "es",
+        title: "Chainsmoker Cat tendrá adaptación al anime",
+        img: "https://i.postimg.cc/fbfv763p/1769993652-8dfd2d1ee8a4123661dc1da5dcc5a3a4-768x432.png",
+        videoUrl: "https://youtu.be/7tfxuLFVu7o?si=qCy2_XErtJgtou_T",
+        desc: "El manga Chainsmoker Cat, creado por NyanNyanFactory, contará con una adaptación al anime que se estrenará en julio de 2026. Junto al anuncio, se revelaron un teaser visual, un tráiler oficial, así como el elenco principal y el equipo de producción.",
+        date: "2026-07-01",
+        author: "Admin"
+    },
+    {
+        id: "12",
+        server: "sa",
+        title: "مانغا Chainsmoker Cat تحصل على أنمي رسمي",
+        img: "https://i.postimg.cc/fbfv763p/1769993652-8dfd2d1ee8a4123661dc1da5dcc5a3a4-768x432.png",
+        videoUrl: "https://youtu.be/7tfxuLFVu7o?si=qCy2_XErtJgtou_T",
+        desc: "تم الإعلان رسميًا عن حصول مانغا Chainsmoker Cat من تأليف NyanNyanFactory على اقتباس أنمي، من المقرر عرضه في يوليو 2026. كما تم الكشف عن صورة تشويقية، وعرض دعائي، إضافة إلى طاقم العمل والممثلين الرئيسيين.",
+        date: "2026-07-01",
+        author: "Admin"
+    },
+    {
+        server: "jp",
+        title: "『Chainsmoker Cat』アニメ化決定",
+        img: "https://i.postimg.cc/fbfv763p/1769993652-8dfd2d1ee8a4123661dc1da5dcc5a3a4-768x432.png",
+        videoUrl: "https://youtu.be/7tfxuLFVu7o?si=qCy2_XErtJgtou_T",
+        desc: "NyanNyanFactoryによる漫画『Chainsmoker Cat』が、2026年7月よりアニメ化されることが決定した。発表と同時に、ティザービジュアルやPV、メインキャストおよびスタッフ情報も公開されている。",
+        date: "2026-07-01",
+        author: "Admin"
+    },
             {
         id: "6",
         server: "us",
