--- a/index.html
+++ b/index.html
@@ -631,6 +631,85 @@
         const ADS_DIRECT_LINK = "https://otieu.com/4/10553289"; 
 
         const newsData = [
+            {
+        id: "18",
+        server: "us",
+        title: "Daemons of the Shadow Realm Anime Reveals Main Trailer and Premiere Date",
+        img: "https://i.postimg.cc/RFgYLxwY/1770021677-6fcdc60d0872034d0390c09cfa544253-768x432.png",
+        videoUrl: "https://youtu.be/XCyj9KKKjUI?si=M2FRoxypxOUv8JEW",
+        desc: "The anime Daemons of the Shadow Realm (Yomi no Tsugai) has revealed its main trailer and a new visual, along with an official premiere date set for April 4, 2026. Studio BONES FILM is handling the animation, with two consecutive cours confirmed. The series will stream on Crunchyroll.",
+        date: "2026-04-04",
+        author: "Admin"
+    },
+    {
+        id: "19",
+        server: "es",
+        title: "Daemons of the Shadow Realm revela su tráiler principal y fecha de estreno",
+        img: "https://i.postimg.cc/RFgYLxwY/1770021677-6fcdc60d0872034d0390c09cfa544253-768x432.png",
+        videoUrl: "https://youtu.be/XCyj9KKKjUI?si=M2FRoxypxOUv8JEW",
+        desc: "El anime Daemons of the Shadow Realm (Yomi no Tsugai) ha presentado su tráiler principal y una nueva imagen promocional, además de confirmar su estreno para el 4 de abril de 2026. La animación está a cargo del estudio BONES FILM y contará con dos cours consecutivos. La serie se emitirá en Crunchyroll.",
+        date: "2026-04-04",
+        author: "Admin"
+    },
+    {
+        id: "20",
+        server: "sa",
+        title: "أنمي Daemons of the Shadow Realm يكشف عن العرض الرئيسي وموعد العرض",
+        img: "https://i.postimg.cc/RFgYLxwY/1770021677-6fcdc60d0872034d0390c09cfa544253-768x432.png",
+        videoUrl: "https://youtu.be/XCyj9KKKjUI?si=M2FRoxypxOUv8JEW",
+        desc: "كشف أنمي Daemons of the Shadow Realm (Yomi no Tsugai) عن العرض الترويجي الرئيسي وصورة جديدة، إلى جانب تحديد موعد العرض الرسمي في 4 أبريل 2026. يتولى استوديو BONES FILM مهمة الإنتاج، مع تأكيد عرض موسمين متتاليين. كما سيتم عرض الأنمي عبر منصة Crunchyroll.",
+        date: "2026-04-04",
+        author: "Admin"
+    },
+    {
+        server: "jp",
+        title: "『黄泉のツガイ』メイントレーラー＆放送開始日公開",
+        img: "https://i.postimg.cc/RFgYLxwY/1770021677-6fcdc60d0872034d0390c09cfa544253-768x432.png",
+        videoUrl: "https://youtu.be/XCyj9KKKjUI?si=M2FRoxypxOUv8JEW",
+        desc: "テレビアニメ『黄泉のツガイ（Daemons of the Shadow Realm）』は、メイントレーラーと最新ビジュアルを公開し、2026年4月4日より放送開始することが発表された。アニメーション制作はBONES FILMが担当し、2クール連続での放送が予定されている。配信はCrunchyrollにて行われる。",
+        date: "2026-04-04",
+        author: "Admin"
+    },
+            {
+        id: "14",
+        server: "us",
+        title: "Aniplex Acquires EGG FIRM, Studio Behind Mushoku Tensei",
+        img: "https://i.postimg.cc/RFgYLxwY/1770021677-6fcdc60d0872034d0390c09cfa544253-768x432.png",
+        videoUrl: "",
+        desc: "Sony’s Aniplex has acquired anime production company EGG FIRM for an undisclosed amount. The studio, known for hit titles such as Mushoku Tensei: Jobless Reincarnation, DanMachi, Ruri Rocks, and Onimai, is now a wholly-owned subsidiary of Aniplex.",
+        date: "2026-01-01",
+        author: "Admin"
+    },
+    {
+        id: "15",
+        server: "es",
+        title: "Aniplex adquiere EGG FIRM, el estudio detrás de Mushoku Tensei",
+        img: "https://i.postimg.cc/RFgYLxwY/1770021677-6fcdc60d0872034d0390c09cfa544253-768x432.png",
+        videoUrl: "",
+        desc: "Sony Aniplex ha adquirido la compañía de producción de anime EGG FIRM por una cantidad no revelada. El estudio, responsable de éxitos como Mushoku Tensei: Jobless Reincarnation, DanMachi, Ruri Rocks y Onimai, pasa a ser una filial totalmente propiedad de Aniplex.",
+        date: "2026-01-01",
+        author: "Admin"
+    },
+    {
+        id: "16",
+        server: "sa",
+        title: "Aniplex تستحوذ على شركة EGG FIRM المنتجة لأعمال مثل Mushoku Tensei",
+        img: "https://i.postimg.cc/RFgYLxwY/1770021677-6fcdc60d0872034d0390c09cfa544253-768x432.png",
+        videoUrl: "",
+        desc: "أعلنت شركة Aniplex التابعة لسوني عن استحواذها على شركة إنتاج الأنمي EGG FIRM مقابل مبلغ لم يتم الكشف عنه. وتُعرف EGG FIRM بإنتاج أعمال ناجحة مثل Mushoku Tensei: Jobless Reincarnation وDanMachi وRuri Rocks وOnimai، وأصبحت الآن شركة مملوكة بالكامل لـ Aniplex.",
+        date: "2026-01-01",
+        author: "Admin"
+    },
+    {
+        id: "17",
+        server: "jp",
+        title: "アニプレックス、 『無職転生』制作陣のEGG FIRMを買収",
+        img: "https://i.postimg.cc/RFgYLxwY/1770021677-6fcdc60d0872034d0390c09cfa544253-768x432.png",
+        videoUrl: "",
+        desc: "ソニー傘下のアニプレックスは、『無職転生 ～異世界行ったら本気だす～』や『ダンまち』『おにまい』などを手がけたアニメ制作会社EGG FIRMを非公開の金額で買収した。EGG FIRMは現在、アニプレックスの完全子会社となっている。",
+        date: "2026-01-01",
+        author: "Admin"
+    },
               {
         id: "10",
         server: "us",
