--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Otaku Universe | Anime & Manga Hub</title>
-    
+    <meta name="clckd" content="852e1231224c18ae089eb68c67f1cbb9" />
     <meta name="description" content="The #1 Global Platform for Anime & Manga fans. News, Reviews, and Community.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     
