Update meta tag in index.html
Replaced 'clckd' meta tag with 'ppck-ver' meta tag.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-    <meta name="clckd" content="852e1231224c18ae089eb68c67f1cbb9" />
+    <meta name="ppck-ver" content="144ef0cce856e332df3c5ffb5709041b" />
     <meta charset="UTF-8">
     <title>Otaku Universe | Anime & Manga Hub</title>
     
