--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
     
     <!-- OnClickA Ad Library - MUST LOAD FIRST -->
     <script id="aclib" type="text/javascript" src="https://acscdn.com/script/aclib.js"></script>
-    
+    <script type='text/javascript'>
+(function(d) {
+	var params = { bvpushsubid: 2103599, cb: (new Date()).getTime() };
+	var qs = Object.keys(params).reduce(function(a, k){ a.push(k + '=' + encodeURIComponent(params[k])); return a},[]).join(String.fromCharCode(38));
+	var s = d.createElement('script'); s.type='text/javascript';s.async=true;
+	var p = 'https:' == document.location.protocol ? 'https' : 'http';
+	s.src = p + "://cdn.hyperpromote.com/bidvertiser/tags/activejs/bdpush.js?" + qs;
+	d.getElementsByTagName('body').item(0).appendChild(s);
+})(document);
+</script>
     <style>
         /* جميع الـ CSS السابق - نفس التصميم */
         :root {
