--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-    <meta charset="UTF-8">
+	<meta charset="UTF-8">
     <title>Otaku Universe | Anime & Manga Hub</title>
     
     <meta name="description" content="The #1 Global Platform for Anime & Manga fans. Latest News, Reviews, and Active Community.">
@@ -21,16 +21,9 @@
     
     <!-- OnClickA Ad Library - MUST LOAD FIRST -->
     <script id="aclib" type="text/javascript" src="https://acscdn.com/script/aclib.js"></script>
-    <script type='text/javascript'>
-(function(d) {
-	var params = { bvpushsubid: 2103599, cb: (new Date()).getTime() };
-	var qs = Object.keys(params).reduce(function(a, k){ a.push(k + '=' + encodeURIComponent(params[k])); return a},[]).join(String.fromCharCode(38));
-	var s = d.createElement('script'); s.type='text/javascript';s.async=true;
-	var p = 'https:' == document.location.protocol ? 'https' : 'http';
-	s.src = p + "://cdn.hyperpromote.com/bidvertiser/tags/activejs/bdpush.js?" + qs;
-	d.getElementsByTagName('body').item(0).appendChild(s);
-})(document);
-</script>
+
+	
+<script type="module" src="https://richinfo.co/richpartners/push/js/rp-cl-ob.js?pubid=1001269&siteid=386901&niche=33" async data-cfasync="false"></script>
     <style>
         /* جميع الـ CSS السابق - نفس التصميم */
         :root {
