--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+	<meta name='admaven-placement' content=Bqjw6qjU9>
+	
 	<meta charset="UTF-8">
     <title>Otaku Universe | Anime & Manga Hub</title>
     
