--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+    <meta name="monetag" content="4707a917cc2cf5473b7f25accc01c081"> 
+	
 	<meta name='admaven-placement' content=Bqjw6qjU9>
 	
 	<meta charset="UTF-8">
