--- a/index.html
+++ b/index.html
@@ -992,6 +992,11 @@
                 margin-bottom: 25px;
             }
         }
+        @media (min-width: 600px) {
+              .tutorial-overlay {
+                display: none !important;
+              }
+        }      
     </style>
 </head>
 <body>
