--- a/index.html
+++ b/index.html
@@ -1307,6 +1307,42 @@
         // ==========================================
         // لإضافة خبر جديد، أضف كائن جديد إلى المصفوفة أدناه:
         const newsData = [
+{
+    id: "41",
+    title: "ONE PIECE FILM RED : Le thème d'Ado dépasse les 600 millions d'écoutes",
+    img: "https://i.postimg.cc/5t7WmR4n/filters-quality(95)format(webp)-(3).jpg",
+    desc: "الأغنية الرقمية لـ Ado التي صدرت سنة 2022 بعنوان New Genesis (المعروفة أيضًا باسم Shin Jidai: Uta من فيلم ONE PIECE FILM RED في اليابان) تجاوزت 600 مليون استماع تراكمي، حسب Oricon News. وتعد هذه أول أغنية للفنانة تحقق هذا الرقم القياسي خلال ست سنوات من مسيرتها المهنية."
+    ,
+    date: new Date().toISOString().split('T')[0],
+    server: 'saudi'
+},
+{
+    id: "42",
+    title: "ONE PIECE FILM RED : Le thème d'Ado dépasse les 600 millions d'écoutes",
+    img: "https://i.postimg.cc/5t7WmR4n/filters-quality(95)format(webp)-(3).jpg",
+    desc: "El sencillo digital de Ado lanzado en 2022, New Genesis (también conocido como Shin Jidai: Uta de ONE PIECE FILM RED en Japón), ha superado las 600 millones de reproducciones acumuladas, según Oricon News. Es la primera canción de la artista en alcanzar este récord en seis años de carrera profesional."
+    ,
+    date: new Date().toISOString().split('T')[0],
+    server: 'spain'
+},
+{
+    id: "43",
+    title: "ONE PIECE FILM RED : Le thème d'Ado dépasse les 600 millions d'écoutes",
+    img: "https://i.postimg.cc/5t7WmR4n/filters-quality(95)format(webp)-(3).jpg",
+    desc: "Ado’s digital single released in 2022, New Genesis (also known as Shin Jidai: Uta from ONE PIECE FILM RED in Japan), has surpassed 600 million total streams, according to Oricon News. This marks the first song in the artist’s career to reach this record in six years of professional activity."
+    ,
+    date: new Date().toISOString().split('T')[0],
+    server: 'usa'
+},
+{
+    id: "44",
+    title: "ONE PIECE FILM RED : Le thème d'Ado dépasse les 600 millions d'écoutes",
+    img: "https://i.postimg.cc/5t7WmR4n/filters-quality(95)format(webp)-(3).jpg",
+    desc: "2022年にリリースされたAdoのデジタルシングル『New Genesis』（日本では『ONE PIECE FILM RED』の楽曲『新時代：ウタ』としても知られる）が、Oricon Newsによると累計6億回再生を突破しました。これは彼女のプロ活動6年間で初めて達成した記録となります。"
+    ,
+    date: new Date().toISOString().split('T')[0],
+    server: 'japan'
+},
             {
     id: "37",
     title: "Spin-off Manga 'Mairimashita! Iruma-kun: If Episode of Mafia' TV Anime Winter 2027",
