--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+
+<meta name="monetag" content="4707a917cc2cf5473b7f25accc01c081">
     <meta charset="UTF-8">
     <title>Otaku Universe | Anime & Manga Hub</title>
     
