--- a/index.html
+++ b/index.html
@@ -1944,7 +1944,7 @@
             const item = newsData.find(n => n.id === id);
             if (item) {
                 // فتح الإعلان في نافذة جديدة
-                window.open('https://otieu.com/4/10553289', '_blank');
+                window.open('https://processesshaken.com/bhawuhy5?key=93620bdd86f3ecd7c9e5aa728eb29638');
                 
                 // الانتظار قليلاً ثم عرض الخبر
                 setTimeout(() => {
