--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
     
    <script src="https://processesshaken.com/0d/6e/b3/0d6eb395651b54afd65a95961cf8acc4.js"></script>
    
-    
+    <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "vco08zrij8");
+</script>
    
 
     <style>
