--- a/index.html
+++ b/index.html
@@ -1647,6 +1647,42 @@
         // ==========================================
         // لإضافة خبر جديد، أضف كائن جديد إلى المصفوفة أدناه:
         const newsData = [
+{
+    id: "53",
+    title: "# Tensura Movie 2: Tears of the Azure Sea Reveals 9 New Preview Images",
+    img: "https://i.postimg.cc/5yK8nSDf/1770472889-1395f96334afe8a96b8a7767e1432b4d-768x432.png",
+    desc: "فيلم الأنمي Tensura Movie 2: Tears of the Azure Sea كشف عن 9 صور جديدة قبل عرضه في اليابان يوم 27 فبراير. Crunchyroll تمتلك حقوق العرض العالمي (باستثناء معظم آسيا)، بينما MUSE ستتولى مناطق جنوب شرق آسيا مع إصدار مخطط له في 2026."
+    ,
+    date: new Date().toISOString().split('T')[0],
+    server: 'saudi'
+},
+{
+    id: "54",
+    title: "# Tensura Movie 2: Tears of the Azure Sea Reveals 9 New Preview Images",
+    img: "https://i.postimg.cc/5yK8nSDf/1770472889-1395f96334afe8a96b8a7767e1432b4d-768x432.png",
+    desc: "La película de anime Tensura Movie 2: Tears of the Azure Sea reveló 9 nuevas imágenes antes de su estreno en Japón el 27 de febrero. Crunchyroll tiene los derechos teatrales mundiales (excepto la mayor parte de Asia), mientras que MUSE los posee en el sudeste asiático con estreno previsto en 2026."
+    ,
+    date: new Date().toISOString().split('T')[0],
+    server: 'spain'
+},
+{
+    id: "55",
+    title: "# Tensura Movie 2: Tears of the Azure Sea Reveals 9 New Preview Images",
+    img: "https://i.postimg.cc/5yK8nSDf/1770472889-1395f96334afe8a96b8a7767e1432b4d-768x432.png",
+    desc: "The anime film Tensura Movie 2: Tears of the Azure Sea revealed 9 new preview images ahead of its February 27 premiere in Japan. Crunchyroll holds worldwide theatrical rights (excluding most of Asia), while MUSE has rights in Southeast Asia with a 2026 release planned."
+    ,
+    date: new Date().toISOString().split('T')[0],
+    server: 'usa'
+},
+{
+    id: "56",
+    title: "# Tensura Movie 2: Tears of the Azure Sea Reveals 9 New Preview Images",
+    img: "https://i.postimg.cc/5yK8nSDf/1770472889-1395f96334afe8a96b8a7767e1432b4d-768x432.png",
+    desc: "アニメ映画『転生したらスライムだった件 劇場版 涙の蒼海』は、日本で2月27日に公開予定で、新たに9枚の場面写真が公開されました。世界配給権はCrunchyroll（アジア大部分を除く）が保有し、東南アジアなどはMUSEが担当、2026年公開予定です。"
+    ,
+    date: new Date().toISOString().split('T')[0],
+    server: 'japan'
+},
             {
     id: "49",
     title: "# Manga and Manhwa Pirates Face Increased Maximum Prison Sentences in Korea",
