--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
     
    <script src="https://processesshaken.com/0d/6e/b3/0d6eb395651b54afd65a95961cf8acc4.js"></script>
+
+<script defer src="https://cloud.umami.is/script.js" data-website-id="4fd2bfef-ef59-45f5-9475-3fa777cfc739"></script>
     <style>
         /* --- Theme Variables --- */
         :root {
